docs: complete the Clojure Datalevin release
Document the semantic-graph premise, supported command surface, runtime requirements, structural and semantic language coverage, resident service, and greenfield schema policy.

Record the architecture boundaries and the concrete gains and costs of choosing Clojure, Datalevin, JTreeSitter, and optional SCIP TypeScript.

Replace Node/JSONL-era GitHub Action examples with graph export artifacts, add a Java 25 Clojure CI pipeline, remove the obsolete package example, and mark the POSIX launch and benchmark scripts executable.